fix: alignment of topbar-images

--- a/src/app/components/layout/topbar/styles/profil.scss
+++ b/src/app/components/layout/topbar/styles/profil.scss
@@ -168,8 +168,11 @@
 .profil-image {
     position: relative;
     width: 70px;
-    height: 70px;
+    height:100%;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img[alt="avatar-profil"] {
         width: 100%;
