--- a/src/app/components/layout/topbar/styles/topbar-logo.scss
+++ b/src/app/components/layout/topbar/styles/topbar-logo.scss
@@ -21,7 +21,7 @@
     @media (max-width: 375px) {
         .topbar {
             img {
-                width: 161px;
+                width: auto;
                 height: 50px;
             }
         }
